--- a/fb2/index.html
+++ b/fb2/index.html
@@ -68,10 +68,23 @@
                                     Log In
                                 </button>
                             </div>
+                            <div class="fp">
+                                <a class="afp" href="forgot.html">Forgotten password?</a>
+                            </div>
+                            <div class="fflex">
+
+                            </div>
+                            <div class="cna">
+                                <a role="button" href="#" rel="async" class="crb">
+                                    Create New Account
+                                </a>
+                            </div>
                         </form>
                     </div>
                     <div class="form2">
-    
+                        <p>
+                            <a href="registration.html" class="regis">Create a page </a> for a celebrity, brand or business.
+                        </p>
                     </div>
                 </div>
             </div>
