--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <div class="second">
                             <a href="user1.html" title="USERNAME" class="user1">
                                 <img class="img2" src="https://scontent-maa2-1.xx.fbcdn.net/v/t1.30497-1/143086968_2856368904622192_1959732218791162458_n.png?stp=dst-png_p160x160&_nc_cat=1&ccb=1-7&_nc_sid=dbb9e7&_nc_ohc=vVhbKhjuOB0AX-J48cD&_nc_ht=scontent-maa2-1.xx&oh=00_AT8_H9cl5Gss0RINAt5HK1Da3-40wSR-5kjXnVUpnjp-rg&oe=63256F78" alt="">
-                                <div class="name">UserName</div>
+                                <div class="name" style="margin-top: 159px;">UserName</div>
                             </a>
                         </div>
                         <div class="first">
