--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="box2">hhhdhhdh
+                <div class="box2">
                     <div class="form1">
                         <form class="formn">
                             <input type="hidden" autocomplete="off">
